fix spelling from uo to ul in lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,9 +13,9 @@
     <h1> Description</h1>
 
     <h2>Ingredients</h2>
-    <uo>1 pound of sweet Italian sausage</uo>
-    <uo>3/4 pounds of lean ground beef</uo>
-    <uo>...</uo>
+    <ul>1 pound of sweet Italian sausage</ul>
+    <ul>3/4 pounds of lean ground beef</ul>
+    <ul>...</ul>
 
     <h2>Steps</h2>
     <li>Gather all your ingredients</li>
