fix spelling from from li to ol lasanga.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,9 +18,9 @@
     <ul>...</ul>
 
     <h2>Steps</h2>
-    <li>Gather all your ingredients</li>
-    <li>Cook the sausage</li>
-    <li>...</li>
+    <ol>Gather all your ingredients</ol>
+    <ol>Cook the sausage</ol>
+    <ol>...</ol>
     
 </body>
 </html>
