--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/lasagna.html">lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+      </ul>
 </body>
 </html>
