--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Spaghetti</h1>
 
-    <img src="images/spaghetti.jpg">
+    <img src="images/pasta.jpg" width="400" height="400">
 
     <h1> Description</h1>
 
