Change to html in lasagna.html, add styles.css and styled index.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="recipes.css"/>
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <div class="container" id="container">
+        <div class ="recipe-card feature">
+            <img
+            src="images/lasagna.jpg" width="400" height="400"
+            alt="Lasagna"/>
+            <div class="recipe-content">
 
-    <img src="images/lasagna.jpg" width="400" height="400">
-
-    <h1> Description</h1>
-
-    <h2>Ingredients</h2>
-    <ul>1 pound of sweet Italian sausage</ul>
-    <ul>3/4 pounds of lean ground beef</ul>
-    <ul>...</ul>
-
-    <h2>Steps</h2>
-    <ol>Gather all your ingredients</ol>
-    <ol>Cook the sausage</ol>
-    <ol>...</ol>
+                <h1>Description</h1>
+                <section class ="list">
+                    <h2>Ingredients</h2>
+                        <ul>1 pound of sweet Italian sausage</ul>
+                        <ul>3/4 pounds of lean ground beef</ul>
+                        <ul>...</ul>                
+                    <h2>Steps</h2>
+                        <ol>Gather all your ingredients</ol>
+                        <ol>Cook the sausage</ol>
+                        <ol>...</ol>
+                </section>
+            </div>
+        </div>
+        <a href"#">View other recipes</a>
+    </div>
     
 </body>
 </html>
