--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
+    <div class="recipe-list">
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
         <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
       </ul>
+    </div>
 </body>
 </html>
