Add new HTML to pizza.html and spaghetti.html; Share recipess.css with all recipes pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,32 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="recipes.css"/>
+    <link rel="stylesheet" type="text/css" href="../recipes.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container" id="container">
         <div class ="recipe-card feature">
             <img
-            src="images/lasagna.jpg" width="400" height="400"
-            alt="Lasagna"/>
+            src="images/lasagna.jpg" width="600" height="auto"
+            alt="Lasagna"
+            />
             <div class="recipe-content">
-
                 <h1>Description</h1>
-                <section class ="list">
-                    <h2>Ingredients</h2>
-                        <ul>1 pound of sweet Italian sausage</ul>
-                        <ul>3/4 pounds of lean ground beef</ul>
-                        <ul>...</ul>                
-                    <h2>Steps</h2>
-                        <ol>Gather all your ingredients</ol>
-                        <ol>Cook the sausage</ol>
-                        <ol>...</ol>
-                </section>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <section class="recipe-info">
+                        <ul>
+                            <li class="recipe-prep-time">
+                                <h2>Preparation Time</h2>
+                                <p>30 min</p>
+                            </li>
+                            <li>
+                                <h2>Total Time</h2>
+                                <p>40 min</p>
+                            </li>
+                            <li>
+                                <h2>Yield</h2>
+                                <p>40 min</p>
+                            </li>   
+                        </ul>
+                    </section>
+                <a href"#">View other recipes</a>
             </div>
         </div>
-        <a href"#">View other recipes</a>
     </div>
-    
 </body>
 </html>
