--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
     <div class="recipe-list">
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
-        <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+        <ol>
+        <a href="recipes/lasagna.html">Lasagna Recipe</a>
+        <a href="recipes/pizza.html">Pizza Recipe</a>
+        <a href="recipes/spaghetti.html">Spaghetti Recipe</a>
+        </ol>
       </ul>
     </div>
 </body>
