--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,25 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../recipes.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-
-    <img src="images/pizza.jpg" width="400" height="400">
-
-    <h1> Description</h1>
-
-    <h2>Pizza</h2>
-    <ul>1 Cup Warm Water</ul>
-    <ul>25g dry east</ul>
-    <ul>2 cups of flower</ul>
-
-    <h2>Steps</h2>
-    <ol>Gather all your ingredients</ol>
-    <ol>mix water and yeast</ol>
-    <ol>knead the dough</ol>
-    <ol>...</ol>
-
+    <div class="container" id="container">
+        <div class ="recipe-card feature">
+            <img
+            src="images/pizza.jpg" width="600" height="auto"
+            alt="Pizza"
+            />
+            <div class="recipe-content">
+                <h1>Description</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <section class="recipe-info">
+                        <ul>
+                            <li class="recipe-prep-time">
+                                <h2>Preparation Time</h2>
+                                <p>30 min</p>
+                            </li>
+                            <li>
+                                <h2>Total Time</h2>
+                                <p>40 min</p>
+                            </li>
+                            <li>
+                                <h2>Yield</h2>
+                                <p>40 min</p>
+                            </li>   
+                        </ul>
+                    </section>
+                <a href"#">View other recipes</a>
+            </div>
+        </div>
 </body>
 </html>
